--- a/broadcast/src/main/CMakeLists.txt
+++ b/broadcast/src/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCS "websocket_ogg.c")
+set(COMPONENT_SRCS "websocket_ogg-working.c")
 set(COMPONENT_ADD_INCLUDEDIRS "")
 
 register_component()
