Got tcp kinda working

--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -12,12 +12,14 @@
 platform = espressif8266
 framework = arduino
 upload_protocol = espota
+upload_flags = --auth="%%ESPPASS%%"
+board_build.filesystem = littlefs
 
 [env:lights]
 board = d1_mini
 build_flags = 
 	-D MQTT_LIGHTS
-	-D MQTT_SOFTAP
+	-D MQTT_SERVER
 upload_port = eos-portal-light
 lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
 
