Working on client code

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,26 +2,22 @@
 #SHELL := /bin/bash
 #PATH := /usr/local/bin:$(PATH)
 
+env := lights
+
 all:
-	pio -f -c vim run
-
-lights:
-	pio -f -c vim run -e lights
-
-buttons_in:
-	pio -f -c vim run -e buttons_in
+	pio -f -c vim run -e ${env}
 
 upload:
-	pio -f -c vim run --target upload
+	pio -f -c vim run --target upload -e ${env}
 
 clean:
-	pio -f -c vim run --target clean
+	pio -f -c vim run --target clean -e ${env}
 
 program:
-	pio -f -c vim run --target program
+	pio -f -c vim run --target program -e ${env}
 
 uploadfs:
-	pio -f -c vim run --target uploadfs
+	pio -f -c vim run --target uploadfs -e ${env}
 
 update:
 	pio -f -c vim update
