--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -11,9 +11,10 @@
 [env]
 platform = espressif8266
 framework = arduino
-upload_protocol = espota
-upload_flags = --auth="%%ESPPASS%%"
+#upload_protocol = espota
+#upload_flags = --auth="%%ESPPASS%%"
 board_build.filesystem = littlefs
+lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
 
 [env:lights]
 board = d1_mini
@@ -21,32 +22,27 @@ build_flags =
 	-D MQTT_LIGHTS
 	-D MQTT_SERVER
 upload_port = eos-portal-light
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
 
 [env:buttons_out]
 board = d1_mini
 build_flags = 
 	-D MQTT_BUTTONS_OUT
 upload_port = eos-portal-buttons_out
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
 
 [env:buttons_in]
 board = d1_mini
 build_flags = 
 	-D MQTT_BUTTONS_IN
-upload_port = eos-portal-buttons_in
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
+#upload_port = eos-portal-buttons_in
 
 [env:rfid]
 board = d1_mini
 build_flags = 
 	-D MQTT_RFID=armory
 upload_port = eos-rfid-armory
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
 
 [env:sonoff]
 board = sonoff_basic
 build_flags = 
 	-D MQTT_SONOFF=B
 upload_port = eos-portal-sonoff_B
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
