Use mdns to find server

--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -11,12 +11,12 @@
 [env]
 platform = espressif8266
 framework = arduino
-#upload_protocol = espota
-#upload_flags = --auth="%%ESPPASS%%"
+upload_protocol = espota
+upload_flags = --auth="%%ESPPASS%%"
 board_build.filesystem = littlefs
 lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
 
-[env:lights]
+[env:light]
 board = d1_mini
 build_flags = 
 	-D MQTT_LIGHTS
@@ -33,7 +33,7 @@ upload_port = eos-portal-buttons_out
 board = d1_mini
 build_flags = 
 	-D MQTT_BUTTONS_IN
-#upload_port = eos-portal-buttons_in
+upload_port = eos-portal-buttons_in
 
 [env:rfid]
 board = d1_mini
