Switch to async tcp

--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -11,8 +11,8 @@
 [env]
 platform = espressif8266
 framework = arduino
-#upload_protocol = espota
-#upload_flags = --auth="%%ESPPASS%%"
+upload_protocol = espota
+upload_flags = --auth="%%ESPPASS%%"
 board_build.filesystem = littlefs
 lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
 
@@ -45,5 +45,5 @@ upload_port = eos-rfid-armory
 board = sonoff_basic
 build_flags = 
 	-D MQTT_SONOFF=\"B\"
-#upload_port = eos-portal-sonoff_B
+upload_port = eos-portal-sonoff_B
 board_build.ldscript = eagle.flash.1m128.ld
