Switch to remotedebug for debugging

--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -14,7 +14,9 @@ framework = arduino
 upload_protocol = espota
 upload_flags = --auth="%%ESPPASS%%"
 board_build.filesystem = littlefs
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.4
+lib_deps =
+	adafruit/Adafruit NeoPixel@^1.10.4
+	joaolopesf/RemoteDebug@^2.1.2
 
 [env:light]
 board = d1_mini
@@ -44,6 +46,8 @@ upload_port = eos-rfid-armory
 [env:sonoff]
 board = sonoff_basic
 build_flags = 
+	-D WEBSOCKET_DISABLED=true
+	-D USE_LIB_WEBSOCKET=true
 	-D MQTT_SONOFF=\"B\"
 upload_port = eos-portal-sonoff_B
 board_build.ldscript = eagle.flash.1m64.ld
